validate/require-istio-sidecar.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-istio-sidecar
  annotations:
    policies.kyverno.io/title: Require Istio Sidecar Container
    policies.kyverno.io/category: Istio
    policies.kyverno.io/description: Validates that Istio sidecar container is present in pods
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: check-istio-proxy
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kyverno
          - istio-system
    validate:
      message: "Pod must have Istio sidecar proxy container"
      anyPattern:
      - spec:
          containers:
          - name: istio-proxy
      - metadata:
          annotations:
            sidecar.istio.io/inject: "false"
